# Scanner

./: .gitignore  Backtest_F_ATR_FT_Report.csv  Backtest_F_ATR_Tr.csv  Backtest_F_ATR_Tr_Report.csv  Backtest_F_Str_FT_Report.csv  Backtest_F_Str_Tr_Report.csv  Backtest_WF_ATR_FT_Report.csv  Backtest_WF_ATR_Tr.csv  Backtest_WF_ATR_Tr_Report.csv  Backtest_WF_Str_FT.csv  Backtest_WF_Str_FT_Report.csv  Backtest_WF_Str_Tr.csv  Backtest_WF_Str_Tr_Report.csv  Input_backtest_F_Str_FT.csv  Input_backtest_F_Str_Tr.csv  Output_backtest_F_ATR_FT_Report.csv  Output_backtest_F_ATR_Tr_Report.csv  Output_backtest_F_Str_Tr_Report.csv  Output_backtest_WF_ATR_FT_Report.csv  Output_backtest_WF_Str_FT_Report.csv  Output_backtest_WF_Str_Tr_Report.csv  Strategy_Comparison_Report.csv  Strategy_Universe_Report.xlsx  architecture_v3.txt  architecture_v4.txt  backtest_report.py  requirements.txt  run.py  scanner_f.py  scanner_wf.py  screener_f.py  screener_wf.py  strategy_comparison.py  strategy_comparison_v1.py
strategy_compare_v4/: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  statistics_generator.py  stock_backtest_stats.py  strategy_comparison.py
strategy_compare_v4/backtest_F_ATR_FT/: BEL_backtest_F_ATR_FT.csv  CUMMINSIND_backtest_F_ATR_FT.csv  IDEA_backtest_F_ATR_FT.csv  INFY_backtest_F_ATR_FT.csv  MOTHERSON_backtest_F_ATR_FT.csv  PAYTM_backtest_F_ATR_FT.csv
strategy_compare_v4/backtest_F_ATR_Tr/: BALRAMCHIN_backtest_F_ATR_Tr.csv  BEL_backtest_F_ATR_Tr.csv  CEATLTD_backtest_F_ATR_Tr.csv  DIXON_backtest_F_ATR_Tr.csv  HINDUNILVR_backtest_F_ATR_Tr.csv  IDEA_backtest_F_ATR_Tr.csv  INFY_backtest_F_ATR_Tr.csv  MARUTI_backtest_F_ATR_Tr.csv
strategy_compare_v4/backtest_F_Str_FT/: CUMMINSIND_backtest_F_Str_FT.csv  DIXON_backtest_F_Str_FT.csv  IDEA_backtest_F_Str_FT.csv
strategy_compare_v4/backtest_F_Str_Tr/: HINDUNILVR_backtest_F_Str_Tr.csv  INFY_backtest_F_Str_Tr.csv  PERSISTENT_backtest_F_Str_Tr.csv  RELIANCE_backtest_F_Str_Tr.csv  TATAPOWER_backtest_F_Str_Tr.csv  backtest_F_Str_Tr_Statistics.xlsx
strategy_compare_v4/backtest_WF_ATR_FT/: ADANIENT_backtest_WF_ATR_FT.csv  BALRAMCHIN_backtest_WF_ATR_FT.csv  CEATLTD_backtest_WF_ATR_FT.csv  CUMMINSIND_backtest_WF_ATR_FT.csv  DIXON_backtest_WF_ATR_FT.csv  HDFCBANK_backtest_WF_ATR_FT.csv  HFCL_backtest_WF_ATR_FT.csv  INFY_backtest_WF_ATR_FT.csv  MARUTI_backtest_WF_ATR_FT.csv  PAYTM_backtest_WF_ATR_FT.csv  PERSISTENT_backtest_WF_ATR_FT.csv  backtest_WF_ATR_FT_Statistics.xlsx
strategy_compare_v4/backtest_WF_ATR_Tr/: BALRAMCHIN_backtest_WF_ATR_Tr.csv  BEL_backtest_WF_ATR_Tr.csv  CUMMINSIND_backtest_WF_ATR_Tr.csv  DIXON_backtest_WF_ATR_Tr.csv  HDFCBANK_backtest_WF_ATR_Tr.csv  HFCL_backtest_WF_ATR_Tr.csv  HINDUNILVR_backtest_WF_ATR_Tr.csv  IDEA_backtest_WF_ATR_Tr.csv  INDIGO_backtest_WF_ATR_Tr.csv  INFY_backtest_WF_ATR_Tr.csv  ITC_backtest_WF_ATR_Tr.csv  MOTHERSON_backtest_WF_ATR_Tr.csv  PAYTM_backtest_WF_ATR_Tr.csv  backtest_WF_ATR_Tr_Statistics.xlsx
strategy_compare_v4/backtest_WF_Str_FT/: ADANIENT_backtest_WF_Str_FT.csv  BALRAMCHIN_backtest_WF_Str_FT.csv  CEATLTD_backtest_WF_Str_FT.csv  DIXON_backtest_WF_Str_FT.csv  HFCL_backtest_WF_Str_FT.csv  HINDUNILVR_backtest_WF_Str_FT.csv  IDEA_backtest_WF_Str_FT.csv  INDIGO_backtest_WF_Str_FT.csv  INFY_backtest_WF_Str_FT.csv  KEC_backtest_WF_Str_FT.csv  LICHSGFIN_backtest_WF_Str_FT.csv  MOTHERSON_backtest_WF_Str_FT.csv  TATAPOWER_backtest_WF_Str_FT.csv  TCS_backtest_WF_Str_FT.csv  backtest_WF_Str_FT_Statistics.xlsx
strategy_compare_v4/backtest_WF_Str_Tr/: ADANIENT_backtest_WF_Str_Tr.csv  CDSL_backtest_WF_Str_Tr.csv  CEATLTD_backtest_WF_Str_Tr.csv  HDFCBANK_backtest_WF_Str_Tr.csv  HINDUNILVR_backtest_WF_Str_Tr.csv  MARUTI_backtest_WF_Str_Tr.csv  PAYTM_backtest_WF_Str_Tr.csv  TATAPOWER_backtest_WF_Str_Tr.csv  TCS_backtest_WF_Str_Tr.csv  YESBANK_backtest_WF_Str_Tr.csv
strategy_compare_v4/comparison/: correlation.py  leaderboard.py  robustness.py  stock_compare.py  strategy_compare.py
strategy_compare_v4/config/: constants.py  recommendations.py  thresholds.py  weights.py
strategy_compare_v4/derived_metrics/: derived_engine.py  efficiency_metrics.py  exit_metrics.py  opportunity_metrics.py  performance_metrics.py  (+3 more)
(+381 files in other folders)
